--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
       </nav>
       <div>
-        <img src="images/illustration-intro.png" alt="intro" />
+        <!-- <img src="images/illustration-intro.png" alt="intro" /> -->
         <h1>All your files in one secure location, accessible anywhere.</h1>
         <p>
           Fylo stores all your most important files in one secure location.
@@ -108,11 +108,13 @@
       </div>
     </div>
 
-    <div class="comillas">
-      <img src="images/bg-quotes.png" alt="comillas" />
-    </div>
+    
 
     <section class="testimonio">
+      <div class="comillas">
+        <img src="images/bg-quotes.png" alt="comillas" />
+      </div>
+
       <article>
 
        
@@ -169,6 +171,7 @@
           extremely generous. If you have any questions, our support team would
           be happy to help you.
         </p>
+        <form clas="forminput">
 
         <input
           type="email"
@@ -180,6 +183,8 @@
           value="Get started for free"
           id="section-email-btn"
         />
+
+      </form>
       </div>
     </section>
 
@@ -196,22 +201,24 @@
         </div>
 
         <div class="medio">
-          <li>+1-543-123-4567</li>
-          <li>example@fylo.com</li>
+          <ul>
+          <li>+1-543-123-4567</li> <img src="images/icon-phone.svg" alt="" />
+          <li>example@fylo.com</li><img src="images/icon-email.svg" alt="" />
+          </ul>
         </div>
         <div class="derecha">
-          <a href="">About Us</a>
-          <a href="">Jobs</a>
-          <a href="">Press</a>
-          <a href="">Blog</a>
+          <a href="">About Us</a><br><br>
+          <a href="">Jobs</a><br><br>
+          <a href="">Press</a><br><br>
+          <a href="">Blog</a><br><br>
         </div>
         <div>
-          <a href="">Contact Us</a>
-          <a href="">Terms</a>
-          <a href="">Privacy</a>
+          <a href="">Contact Us</a><br><br>
+          <a href="">Terms</a><br><br>
+          <a href="">Privacy</a><br><br>
         </div>
         <div>
-          <a href="#"><span class="fab fa-facebook-f"></span></a>
+          <a href="#"><span class="fab fa-facebook-f"></span></a> 
           <a href="#"><span class="fab fa-twitter"></span></a>
           <a href="#"><span class="fab fa-instagram"></span></a>
         </div>
