--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
           <div class="img-1">
             <img src="images/icon-access-anywhere.svg" alt="cp">
             <h2> Access your files, anywhere</h2>
-            <p>The ability to use a smartphone, tablet, or computer to access your account means your
+            <p class="parrafo">The ability to use a smartphone, tablet, or computer to access your account means your
               files follow you everywhere.</p>
           </div>
           <div class="img-1">
             <img src="images/icon-security.svg" alt="sec">
             <h2> Security you can trust</h2>
-            <p> 2-factor authentication and user-controlled encryption are just a couple of the security
+            <p class="parrafo2"> 2-factor authentication and user-controlled encryption are just a couple of the security
               features we allow to help secure your files.</p>
           </div>
         </div>
@@ -80,13 +80,13 @@
           <div class="img-1">
             <img src="images/icon-collaboration.svg" alt="coll">
             <h2> Real-time collaboration</h2>
-            <p>Securely share files and folders with friends, family and colleagues for live collaboration.
+            <p class="parrafo3">Securely share files and folders with friends, family and colleagues for live collaboration.
               No email attachments required.</p>
           </div>
           <div class="img-1">
             <img src="images/icon-any-file.svg" alt="file">
             <h2>Store any type of file</h2>
-            <p> Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
+            <p class="parrafo4"> Whether you're sharing holidays photos or work documents, Fylo has you covered allowing for all
               file types to be securely stored and shared.</p>
           </div>
         </div>
